Temp fix for profile picture stretch

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -9,7 +9,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 260px;
+    width: auto;
     height: 260px;
     margin-left: auto;
     margin-right: auto;
